<resources>
    <string name="app_name">PocketSoccer</string>
    <string name="title_activity_gameplay">GameplayActivity</string>
    <string name="new_game_text">NEW GAME</string>
    <string name="play">PLAY</string>
    <string name="continue_text">CONTINUE</string>
    <string name="settings_text">SETTINGS</string>
    <string name="history_text">HISTORY</string>
    <string name="friction_text">FRICTION</string>
    <string name="game_speed_text">GAME SPEED</string>
    <string name="ball_mass_text">BALL MASS</string>
    <string name="pause_continue_text">CONTINUE</string>
    <string name="pause_main_menu_text">MAIN MENU</string>
    <string name="pause_button_text">I I</string>
    <string name="next_text">NEXT</string>
    <string name="static_text">STATIC</string>
    <string name="motion_text">MOTION</string>
    <string name="goals_text">GOALS</string>
    <string name="minutes_text">MINUTES</string>
    <string name="human_text">HUMAN</string>
    <string name="bot_text">BOT</string>
    <string name="reset_text">RESET</string>
    <string name="all_matches">ALL MATCHES</string>
    <string name="delete">DELETE</string>
    <string name="main_menu">MAIN MENU</string>
</resources>
