<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.activities.MainMenu"
    android:padding="@dimen/main_menu_padding"
    android:weightSum="4">

    <TextView
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/text_color"
        android:textSize="@dimen/play_button_size"
        android:text="@string/new_game_text"
        android:gravity="center"
        android:onClick="replaceFragment"/>

    <TextView
        android:id="@+id/continue_last_game"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/text_color"
        android:textSize="@dimen/play_button_size"
        android:text="@string/continue_text"
        android:gravity="center"
        android:onClick="continueLastGame"/>

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/text_color"
        android:textSize="@dimen/play_button_size"
        android:text="@string/settings_text"
        android:gravity="center"
        android:onClick="replaceFragment"/>

    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/text_color"
        android:textSize="@dimen/play_button_size"
        android:text="@string/history_text"
        android:gravity="center"
        android:onClick="replaceFragment"/>

</LinearLayout>