<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.activities.GameTypeSelection"
    android:padding="@dimen/wrapper_padding"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/goals"
            android:layout_width="@dimen/criteria_width"
            android:layout_height="wrap_content"
            android:text="@string/goals_text"
            style="@style/Text" />

        <ImageView
            android:id="@+id/limit_decrease"
            android:layout_width="@dimen/setting_arrow_width"
            android:layout_height="wrap_content"
            android:src="@drawable/arrowleft" />

        <TextView
            android:id="@+id/limit_value"
            android:layout_width="@dimen/limit_value_width"
            android:layout_height="wrap_content"
            style="@style/Text" />

        <ImageView
            android:id="@+id/limit_increase"
            android:layout_width="@dimen/setting_arrow_width"
            android:layout_height="wrap_content"
            android:src="@drawable/arrowright" />

        <TextView
            android:id="@+id/minutes"
            android:layout_width="@dimen/criteria_width"
            android:layout_height="wrap_content"
            android:text="@string/minutes_text"
            style="@style/Text" />

    </LinearLayout>

    <TextView
        android:id="@+id/next_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/next_text"
        style="@style/Text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/playing_motion"
            android:layout_width="@dimen/criteria_width"
            android:layout_height="wrap_content"
            android:text="@string/motion_text"
            style="@style/Text" />

        <TextView
            android:id="@+id/playing_static"
            android:layout_width="@dimen/criteria_width"
            android:layout_height="wrap_content"
            android:text="@string/static_text"
            style="@style/Text" />

    </LinearLayout>

</LinearLayout>